# quantum_problems

./: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  gmon.out  polar_system.c  prog
Hermit/: hermit.c  info.txt
Make_it_work/: CMakeLists.txt
watki_w_macierzy/: CMakeLists.txt  analysis_1threads.txt  analysis_2threads.txt  analysis_3threads.txt  analysis_4threads.txt  analysis_5threads.txt  analysis_6threads.txt  analysis_7threads.txt  analysis_8threads.txt  studnia.c
